# CMake-CppUTest-Raspberry-Pi-Pico

./: CMakeLists.txt  LICENSE  README.md
inc/module/: module.h
src/: CMakeLists.txt  main.c
src/module/: CMakeLists.txt  module.c
test/: CMakeLists.txt  RunAllTests.cpp
test/module/: moduleTest.cpp
